--- a/Web/views/pages/dashboard.ejs
+++ b/Web/views/pages/dashboard.ejs
@@ -135,51 +135,51 @@
 						Welcome, <strong><%= authUser.username %></strong>
 					</h1>
 					<p class="subtitle is-5" style="color: rgba(255,255,255,0.7);">
-						<% if (serverData.length > 0) { %>
-							Select a server to manage
-						<% } else { %>
-							<span>You don't have any servers yet</span>
-							<span class="icon"><i class="fa fa-meh-o"></i></span>
-						<% } %>
-					</p>
-				</div>
-				
-				<div class="columns is-centered">
-					<div class="column is-8 is-10-tablet">
-						<div class="server-list">
-							<% serverData.forEach((server, index) => { %>
-								<% if (!server.botJoined) { %>
-									<a class="server-card modal-button" data-target="#post-add-modal" target="_blank" href="<%= pageData.rawJoinLink + '&guild_id=' + server.id %>" style="animation-delay: <%= index * 0.05 %>s;">
-								<% } else if (!server.isAdmin) { %>
-									<a class="server-card modal-button" data-target="#not-admin-modal" style="opacity: 0.5; cursor: not-allowed; animation-delay: <%= index * 0.05 %>s;">
-								<% } else { %>
-									<a class="server-card" href="/dashboard/<%= server.id %>/<%= server.id === 'maintainer' ? 'maintainer' : 'overview'%>" style="animation-delay: <%= index * 0.05 %>s;">
+					<% if (serverData.length > 0) { %>
+						Select a server to manage
+					<% } else { %>
+						<span>You don't have any servers yet</span>
+						<span class="icon"><i class="fa fa-meh-o"></i></span>
+					<% } %>
+				</p>
+			</div>
+			
+			<div class="container-standard">
+				<div style="max-width: 800px; margin: 0 auto;">
+					<div class="server-list">
+						<% serverData.forEach((server, index) => { %>
+							<% if (!server.botJoined) { %>
+								<a class="server-card modal-button" data-target="#post-add-modal" target="_blank" href="<%= pageData.rawJoinLink + '&guild_id=' + server.id %>" style="animation-delay: <%= index * 0.05 %>s;">
+							<% } else if (!server.isAdmin) { %>
+								<a class="server-card modal-button" data-target="#not-admin-modal" style="opacity: 0.5; cursor: not-allowed; animation-delay: <%= index * 0.05 %>s;">
+							<% } else { %>
+								<a class="server-card" href="/dashboard/<%= server.id %>/<%= server.id === 'maintainer' ? 'maintainer' : 'overview'%>" style="animation-delay: <%= index * 0.05 %>s;">
+							<% } %>
+								<img src="<%= server.icon %>" alt="<%= server.id %>" class="server-icon">
+								<div style="flex: 1;">
+									<h2 class="server-name"><%= server.name %></h2>
+									<p style="font-size: 0.8rem; color: rgba(255,255,255,0.5); margin: 0;">
+										<% if (!server.botJoined) { %>
+											<span class="icon is-small"><i class="fa fa-plus-circle"></i></span> Add Skynet to this server
+										<% } else if (!server.isAdmin) { %>
+											<span class="icon is-small"><i class="fa fa-lock"></i></span> No admin access
+										<% } else { %>
+											<span class="icon is-small"><i class="fa fa-cog"></i></span> Manage server settings
+										<% } %>
+									</p>
+								</div>
+								<% if (server.botJoined && server.isAdmin) { %>
+									<span class="server-arrow">
+										<i class="fa fa-chevron-right"></i>
+									</span>
+								<% } else if (!server.botJoined) { %>
+									<span class="tag is-modern">Add Bot</span>
 								<% } %>
-									<img src="<%= server.icon %>" alt="<%= server.id %>" class="server-icon">
-									<div style="flex: 1;">
-										<h2 class="server-name"><%= server.name %></h2>
-										<p style="font-size: 0.8rem; color: rgba(255,255,255,0.5); margin: 0;">
-											<% if (!server.botJoined) { %>
-												<span class="icon is-small"><i class="fa fa-plus-circle"></i></span> Add Skynet to this server
-											<% } else if (!server.isAdmin) { %>
-												<span class="icon is-small"><i class="fa fa-lock"></i></span> No admin access
-											<% } else { %>
-												<span class="icon is-small"><i class="fa fa-cog"></i></span> Manage server settings
-											<% } %>
-										</p>
-									</div>
-									<% if (server.botJoined && server.isAdmin) { %>
-										<span class="server-arrow">
-											<i class="fa fa-chevron-right"></i>
-										</span>
-									<% } else if (!server.botJoined) { %>
-										<span class="tag is-modern">Add Bot</span>
-									<% } %>
-								</a>
-							<% }); %>
-						</div>
-						
-						<% if (serverData.length === 0) { %>
+							</a>
+						<% }); %>
+					</div>
+					
+					<% if (serverData.length === 0) { %>
 						<div class="empty-state">
 							<span class="icon is-large">
 								<i class="fa fa-server fa-3x"></i>
